# projeto_dags

./: Dockerfile  README.md  activity.txt  pokemon.db  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: capturar_pokemon.py  pegar_um_personagem_airflow.py  primeira_dag.py  segunda_dag.py  terceira_dag.py
include/: controller.py  db.py  tarefa_de_print.py
